src/objects/Exception__c.object
<CustomObject>
    <description>Used to store and track exceptions</description>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line Number</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Exception message</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resubmission_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Resubmission Attempts</description>
        <label>Resubmission Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Stack Trace</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Successfully_Resubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Successfully Resubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Name__c</fullName>
        <description>Type of exception</description>
        <label>Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Type_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Resubmission_Attempts__c</columns>
        <columns>Successfully_Resubmitted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Resubmit</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Type_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Resubmission_Attempts__c</columns>
        <columns>Successfully_Resubmitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Successfully_Resubmitted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Resubmit</label>
    </listViews>
    <nameField>
        <displayFormat>EX-{000000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>